# oyster-attestation-verifier

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  secp.pub  secp.sec
.cargo/: config.toml
src/: handler.rs  ivs_handler.rs  main.rs  main_cli.rs
src/test/: attestation.hex
