[package]
name = "oyster-attestation-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.79"
clap = { version = "4.4.6", features = ["derive"] }
ethers = "2.0.10"
hex = "0.4.3"
libsodium-sys-stable = "1.19.30"
oyster-sdk = "0.7.1"
secp256k1 = { version = "0.28.0", features = ["recovery"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.56"

[profile.release]
strip = true
lto = true
panic = "abort"

# cargo run --release -- --secp256k1-secret secp.sec --secp256k1-public secp.pub --ip 127.0.0.1 --port 1400